Use separate bash scripts for deploying stage and prod

--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,6 @@ machine:
     version: 7.10.0
   environment:
     PROJECT_ID: messaging-service-180514
-    CLUSTER_NAME_PROD: messaging-service-prod
-    CLUSTER_NAME_STAGING: messaging-service-stage
     CLOUDSDK_COMPUTE_ZONE: us-central1-a
     DOCKER_IMAGE_NAME: gcr.io/messaging-service-180514/url-provider
     DEBIAN_FRONTEND: noninteractive
@@ -34,24 +32,11 @@ deployment:
   staging:
     branch: /(feature|fix|chore).*/
     commands:
-      - echo "Pushing image $DOCKER_IMAGE_NAME to registry..."
-      - sudo /opt/google-cloud-sdk/bin/gcloud docker -- push $DOCKER_IMAGE_NAME
-      - sudo /opt/google-cloud-sdk/bin/gcloud --quiet config set container/cluster $CLUSTER_NAME_STAGING
-      - sudo /opt/google-cloud-sdk/bin/gcloud config set compute/zone ${CLOUDSDK_COMPUTE_ZONE}
-      - sudo /opt/google-cloud-sdk/bin/gcloud config set container/use_client_certificate True
-      - sudo /opt/google-cloud-sdk/bin/gcloud --quiet container clusters get-credentials $CLUSTER_NAME_STAGING
-      - sudo chown -R ubuntu:ubuntu /home/ubuntu/.kube
-      - TAG="$(grep version package.json |grep -o '[0-9.]*')";
-      - kubectl patch deployment url-provider -p '{"spec":{"template":{"spec":{"containers":[{"name":"url-provider","image":'"$DOCKER_IMAGE_NAME"'":"v'"$TAG"'"}]}}}}'
+      - ./deploy-stage.sh
 
   production:
     branch: master
     commands:
-      - sudo /opt/google-cloud-sdk/bin/gcloud --quiet config set container/cluster $CLUSTER_NAME_PROD
-      - sudo /opt/google-cloud-sdk/bin/gcloud config set compute/zone ${CLOUDSDK_COMPUTE_ZONE}
-      - sudo /opt/google-cloud-sdk/bin/gcloud config set container/use_client_certificate True
-      - sudo /opt/google-cloud-sdk/bin/gcloud --quiet container clusters get-credentials $CLUSTER_NAME_PROD
-      - sudo chown -R ubuntu:ubuntu /home/ubuntu/.kube
-      - TAG="$(grep version package.json |grep -o '[0-9.]*')";
-      - kubectl patch deployment url-provider -p '{"spec":{"template":{"spec":{"containers":[{"name":"url-provider","image":'"$DOCKER_IMAGE_NAME"'":"v'"$TAG"'"}]}}}}'
+      - ./deploy-prod.sh
+
 
