Implemented the ms token verification plus test coverage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Rise Vision Url Provider",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "eslint --fix . && mocha -t 20000 -r test/mocha-env.js test/unit/**",
+    "fulltest": "eslint . && UP_PORT=8080 mocha -t 20000 -r test/mocha-env.js test/**/*.test.js",
+    "dev": "UP_PORT=8080 node index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -16,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/Rise-Vision/url-provider/issues"
   },
-  "homepage": "https://github.com/Rise-Vision/url-provider#readme"
+  "homepage": "https://github.com/Rise-Vision/url-provider#readme",
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.0.1",
+    "simple-mock": "^0.8.0",
+    "superagent": "^3.8.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "ms-token-handler": "git+https://github.com/Rise-Vision/ms-token-handler.git#1.0.0"
+  }
 }
