--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Rise Vision Url Provider",
   "main": "index.js",
   "scripts": {
-    "test": "eslint --fix . && mocha -t 20000 -r test/mocha-env.js test/unit/**",
-    "fulltest": "eslint . && UP_PORT=8080 mocha -t 20000 -r test/mocha-env.js test/**/*.test.js",
+    "test": "eslint --fix . && UP_PORT=8080 mocha -t 20000 -r test/mocha-env.js test/**/*.test.js",
+    "test-unit": "eslint . && mocha -t 20000 -r test/mocha-env.js test/unit/**",
+    "test-integration": "eslint . && UP_PORT=8080 mocha -t 20000 -r test/mocha-env.js test/integration/**",
     "dev": "UP_PORT=8080 node index.js",
     "start": "node index.js"
   },
@@ -33,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "ms-token-handler": "git+https://github.com/Rise-Vision/ms-token-handler.git#1.0.0"
+    "ms-token-handler": "git+https://github.com/Rise-Vision/ms-token-handler.git#1.0.0",
+    "redis-promise": "git+https://github.com/Rise-Vision/redis-promise.git#1.0.1"
   }
 }
